# vaccum_manipulation

./: .bashrc  CMakeLists.txt  README.md  data_py2.pkl  package.xml
abb_experimental/abb_irb1200_7_70_moveit_config/config/: joint_limits.yaml
abb_experimental/abb_irb1200_7_70_moveit_config/launch/: moveit.rviz  moveit_pcl.rviz
abb_experimental/abb_irb1200_7_70_moveit_config/src/: ABB_code.py  ABB_code_my_inverse_kinematics.py  ABB_code_ros.py  ABB_code_ros_move_tcp.py  ABB_code_ros_orig.py  ABB_grippers_presentation.py  ABB_presentation.py  gripper_switcher_client.py  gripper_switcher_server.py
abb_experimental/abb_irb1200_support/urdf/: cage.xacro  irb1200_7_70_macro.xacro
arduino/: CMakeLists.txt  package.xml
arduino/launch/: launch_controllers.launch  res_controller.launch
arduino/src/: controller_node.py  env_controller.py  restart_node.py
arduino/src/Grippers_controller/: Grippers_controller.ino
arduino/src/conveyor_controller/: conveyor_controller.ino
arduino/src/restart_controller/: restart_controller.ino
calibration_abb_2_camera/: CMakeLists.txt  package.xml
calibration_abb_2_camera/launch/: aruco_marker_finder.launch  aruco_marker_finder.launch.save  tf_camera_to_abb.launch  tf_link6_marker.launch  tf_link6_poking.launch
calibration_abb_2_camera/logs/: tf_camera_2_base_log_01-03-2022_18-53-15.csv
calibration_abb_2_camera/scripts/: calibrator.py  fine_calibrator.py  plotter.py
calibration_abb_2_camera/src/: calibrator.cpp  gripper_pose.cpp
demo/: package.xml
demo/scripts/: demo2.py  demo_one.py
gripper_switcher/: CMakeLists.txt  package.xml
gripper_switcher/scripts/: gripper_switcher_client.py  gripper_switcher_server.py  gripper_switcher_server_origin.py
initial_path/: CMakeLists.txt  package.xml
initial_path/launch/: load_cage.launch  main_launch_gal.launch
initial_path/meshes/: Finger.stl  Vaccum.stl  cage.stl  old_cage.stl
initial_path/scripts/: Non linear.py  data_py2.pkl  data_py3.pkl  optimal_control.py  ros_example.py  trajectory_to_arm.py
initial_path/src/: data_py2.pkl  data_py3.pkl  load_env.py  trajectory_to_arm.py
initial_path/urdf/: cage.urdf  cage3.urdf
pcl_segmentation/: CMakeLists.txt  package.xml
pcl_segmentation/config/: config.yaml
pcl_segmentation/script/: claster_client.py
pcl_segmentation/src/: color_based_segmentation.cpp  euclidean_segmentation.cpp
pcl_utilities/: CMakeLists.txt  package.xml
pcl_utilities/pcd/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd  cloud_sample.pcd
pcl_utilities/src/: dummy_camera.cpp  save_to_pcd.cpp
pickommerce_msgs/: CMakeLists.txt  package.xml
pickommerce_msgs/msg/: ClusterObjectList.msg
pickommerce_msgs/srv/: ClusterList.srv  GraspPoint.srv  Grippers_switcher.srv  PakingData.srv  PoseGoal.srv
scripts/: Non linear.py  gal.py
trajectory_planner/: package.xml
trajectory_planner/scripts/: trajectory_planner_client.py  trajectory_planner_server.py
using_markers/: CMakeLists.txt  package.xml
vaccum_msgs/: CMakeLists.txt  package.xml
vaccum_msgs/srv/: ArmCommand.srv  ControllerCommand.srv
vaccum_rl/: CMakeLists.txt  package.xml
vaccum_rl/data/: Mon Jun  6 17:07:15 2022.pkl  plot_data.py
vaccum_rl/launch/: abb_demo.launch  demo.launch  initial_path.launch  launch_service_servers.launch  load_env.launch
vaccum_rl/meshes/: vaccum_box.stl
vaccum_rl/src/: RL_agent.py  abb_utilities_client.py  abb_utilities_server.py  arm_controller.py  config.py  data_py2.pkl  data_py3.pkl  env_arm_controller.py  get_path.py  load_env.py  optimal_control.py  optimal_control_2.py  task.py
